--- a/app/globals.css
+++ b/app/globals.css
@@ -2,20 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
-/* :root {
-  --background: #ffffff;
+html {
+  scroll-behavior: smooth;
+}
+:root {
+  --background: rgb(228 228 231 / var(--tw-bg-opacity, 1));
   --foreground: #171717;
-} */
-
-/* @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  /* background-color: rgb(228 228 231 / var(--tw-bg-opacity, 1)); */
 }
 
 body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
-} */
+}
